fix wrap

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ nav::after {
         margin-left: 8%;
         margin-top: 5%;
         width: 50%;
-        max-width: 35vw;
+        max-width: 30vw;
     }
 }
 
